# mailing

./: Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: rust.yml
migrations/: 20231228214602_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
