[package]
name = "mailing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
actix-web = "4"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"                                  # or compatible version
[dev-dependencies]
reqwest = "0.11"
[[bin]]
path = "src/main.rs"
name = "mailing"
