[package]
name = "mailing"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
actix-web = "4"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
log = "0.4"
env_logger = "0.9" # or compatible version
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
[dev-dependencies]
reqwest = "0.11"
[[bin]]
path = "src/main.rs"
name = "mailing"
